--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
   },
   "engines": {
     "node": ">=16.9.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zastinian/esmile-useful.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Zastinian/esmile-useful/issues"
+  },
+  "homepage": "https://github.com/Zastinian/esmile-useful#readme"
 }
