--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esmile-useful",
-  "version": "0.0.21",
+  "version": "0.0.22-dev",
   "description": "Esmile Utility",
   "main": "index.js",
   "keywords": [
