--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esmile-useful",
-  "version": "0.0.25-dev.0.0.1",
+  "version": "0.0.27-dev.0.0.1",
   "description": "Esmile Utility",
   "main": "index.js",
   "keywords": [
@@ -20,6 +20,7 @@
   ],
   "author": "zastinian@gmail.com",
   "license": "Copyright",
+  "types": "index.d.ts",
   "engines": {
     "node": ">=16.9.0"
   },
