feat: DateFor - formats

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esmile-useful",
-  "version": "0.1.1",
+  "version": "0.2.0-dev.0.0.3",
   "description": "Esmile Utility",
   "main": "index.js",
   "keywords": [
