feat: Types, Docs and Functions

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "hedystia-useful",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Hedystia Utility",
   "main": "index.js",
+  "types": "index.d.ts",
   "keywords": [
     "images",
     "gen",
