--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hedystia/useful",
-  "version": "0.2.2",
+  "version": "0.3.0-dev.0.0.1",
   "description": "Hedystia Utility",
   "main": "index.js",
   "types": "index.d.ts",
